[package]
name = "polyfuse-mount"
version = "0.1.0-dev"
publish = false
description = "FUSE mount utility"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
repository = "https://github.com/ubnt-intrepid/polyfuse.git"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
libc = "0.2"
